feat-minor : searchable on news routes
